--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,24 @@
+/* Header */
+
+header {
+  padding: 10px;
+  border-radius: 10px;
+  background: #0b0f2d;
+  box-shadow: 0 0 10px rgb(255, 255, 255, 0.3);
+}
+
+img {
+  font-size: 2.5rem;
+  margin: 0;
+  width: 30%;
+  border-radius: 50%;
+}
+
+.navBar {
+  color: black;
+  text-decoration: none;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 50px;
@@ -8,22 +29,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-/* Header */
-
-header {
-  padding: 1rem;
-  background: #0b0f2d;
-  border-radius: 50%;
-  box-shadow: 0 0 10px rgb(255, 255, 255, 0.3);
-}
-
-img {
-  font-size: 2.5rem;
-  margin: 0;
-  width: 30%;
-  border-radius: 50%;
 }
 
 /* Main - Seksjonene med planeter */
