--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
 /* Header */
 
-header {
+.headerEn {
   padding: 10px;
   border-radius: 10px;
+  margin-top: 40px;
   background: #0b0f2d;
   box-shadow: 0 0 10px rgb(255, 255, 255, 0.3);
 }
@@ -14,9 +15,25 @@ img {
   border-radius: 50%;
 }
 
-.navBar {
+a {
+  background-color: rgb(44, 44, 132);
   color: black;
-  text-decoration: none;
+  border: solid black;
+  border-radius: 50px;
+  border-width: 5px;
+  padding: 20px;
+  cursor: pointer;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+}
+
+a:hover {
+  background-image: url(images/nasa.jpg);
 }
 
 body {
